--- a/StockDealBusiness/StockDealBusiness.csproj
+++ b/StockDealBusiness/StockDealBusiness.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\StockDealDal\StockDealDal.csproj" />
+  </ItemGroup>
+
 </Project>
