--- a/StockDealService/StockDealService.csproj
+++ b/StockDealService/StockDealService.csproj
@@ -16,10 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
-  </ItemGroup>
-
-  <ItemGroup>
+    <ProjectReference Include="..\StockDealBusiness\StockDealBusiness.csproj" />
     <ProjectReference Include="..\StockDealDal\StockDealDal.csproj" />
   </ItemGroup>
 
