--- a/StockDealService/appsettings.json
+++ b/StockDealService/appsettings.json
@@ -14,5 +14,22 @@
     "ValidAudience": "Softworld App",
     "ValidIssuer": "Softworld Viet Nam",
     "Secret": "D2RarKTIx4dl8XI7C7Efprm3lTOysagW"
+  },
+  "EventBusConnection": {
+    "HostName": "192.168.1.202",
+    "Username": "sw_developer",
+    "Password": "swdev@@123456",
+    "Port": 5672,
+    "VirtualHost": "/"
+  },
+  "EventBusConfig": {
+    "CurrentService": "STOCKLISTING",
+    "CurrentExchange": "EX_STOCKLISTING",
+    "Exchange": {
+      "FILE": "EX_FILE"
+    },
+    "Service": {
+      "FILE": "FILE"
+    }
   }
 }
