--- a/StockDealService/nlog.config
+++ b/StockDealService/nlog.config
@@ -3,7 +3,7 @@
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       autoReload="true"
       internalLogLevel="Info"
-      internalLogFile="Logs/internal-nlog.txt">
+      internalLogFile="${basedir}/Logs/internal-nlog.txt">
 
   <!-- enable asp.net core layout renderers -->
   <extensions>
