--- a/StockDealService/appsettings.json
+++ b/StockDealService/appsettings.json
@@ -26,10 +26,14 @@
     "CurrentService": "STOCKLISTING",
     "CurrentExchange": "EX_STOCKLISTING",
     "Exchange": {
-      "FILE": "EX_FILE"
+      "FILE": "EX_FILE",
+      "MEMBER": "EX_MEMBER",
+      "STOCKTRANS": "EX_STOCKTRANS"
     },
     "Service": {
-      "FILE": "FILE"
+      "FILE": "FILE",
+      "MEMBER": "MEMBER",
+      "STOCKTRANS": "STOCKTRANS"
     }
   }
 }
