--- a/StockDealService/appsettings.json
+++ b/StockDealService/appsettings.json
@@ -8,7 +8,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "StockDealConn": "Server=192.168.1.201;Database=HTGStockCore; User Id=sa;Password=sw123@"
+    "StockDealConn": "Server=192.168.1.201;Database=HTGStockCore; User Id=sa;Password=sw123@",
+    "SysConn": "Server=192.168.1.201;Database=HTGStockCore; User Id=sa;Password=sw123@"
   },
   "JWT": {
     "ValidAudience": "Softworld App",
