--- a/StockDealService/StockDealService.csproj
+++ b/StockDealService/StockDealService.csproj
@@ -18,6 +18,7 @@
 	<PackageReference Include="NLog.Web.AspNetCore" Version="4.13.0" />
 	<PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
 	<PackageReference Include="Microsoft.AspNetCore.SignalR.Core" Version="1.1.0" />
+	<PackageReference Include="System.Collections.Concurrent" Version="4.3.0" />
   </ItemGroup>
 
   <ItemGroup>
