--- a/StockDealService/appsettings.json
+++ b/StockDealService/appsettings.json
@@ -27,14 +27,14 @@
     "CurrentService": "STOCKLISTING",
     "CurrentExchange": "EX_STOCKLISTING",
     "Exchange": {
-      "FILE": "EX_FILE",
       "MEMBER": "EX_MEMBER",
-      "STOCKTRANS": "EX_STOCKTRANS"
+      "STOCKTRANS": "EX_STOCKTRANS",
+      "NOTIFY": "EX_NOTIFY"
     },
     "Service": {
-      "FILE": "FILE",
       "MEMBER": "MEMBER",
-      "STOCKTRANS": "STOCKTRANS"
+      "STOCKTRANS": "STOCKTRANS",
+      "NOTIFY": "NOTIFY"
     }
   }
 }
