tin nhắn hướng dẫn chỉ cho người gửi xem

--- a/StockDealBusiness/StockDealBusiness.csproj
+++ b/StockDealBusiness/StockDealBusiness.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\StockDealCommon\StockDealCommon.csproj" />
     <ProjectReference Include="..\StockDealDal\StockDealDal.csproj" />
   </ItemGroup>
 
