--- a/StockDealDal/StockDealDal.csproj
+++ b/StockDealDal/StockDealDal.csproj
@@ -13,4 +13,8 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="5.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\StockDealCommon\StockDealCommon.csproj" />
+  </ItemGroup>
+
 </Project>
