--- a/StockDealService/appsettings.json
+++ b/StockDealService/appsettings.json
@@ -9,7 +9,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "StockDealConn": "Server=192.168.1.201;Database=HTGStockCore; User Id=sa;Password=sw123@",
-    "SysConn": "Server=192.168.1.201;Database=HTGStockCore; User Id=sa;Password=sw123@"
+    "SysConn": "Server=192.168.1.201;Database=HTGStockCore; User Id=sa;Password=sw123@",
+    "LogConn": "Server=192.168.1.201;Database=HTGLogManager; User Id=sa;Password=sw123@"
   },
   "JWT": {
     "ValidAudience": "Softworld App",
