Thêm điều kiện lọc ở danh sách thương lượng

--- a/StockDealService/appsettings.json
+++ b/StockDealService/appsettings.json
@@ -8,9 +8,9 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "StockDealConn": "Server=192.168.1.201;Database=HTGStockCore; User Id=sa;Password=sw123@",
-    "SysConn": "Server=192.168.1.201;Database=HTGStockCore; User Id=sa;Password=sw123@",
-    "LogConn": "Server=192.168.1.201;Database=HTGLogManager; User Id=sa;Password=sw123@"
+    "StockDealConn": "Server=192.168.2.201;Database=HTGStockCore; User Id=sa;Password=sw123@",
+    "SysConn": "Server=192.168.2.201;Database=HTGStockCore; User Id=sa;Password=sw123@",
+    "LogConn": "Server=192.168.2.201;Database=HTGLogManager; User Id=sa;Password=sw123@"
   },
   "JWT": {
     "ValidAudience": "Softworld App",
@@ -18,14 +18,14 @@
     "Secret": "D2RarKTIx4dl8XI7C7Efprm3lTOysHTG"
   },
   "EventBusConnection": {
-    "HostName": "192.168.1.202",
+    "HostName": "192.168.2.202",
     "Username": "sw_developer",
     "Password": "swdev@@123456",
     "Port": 5672,
     "VirtualHost": "/"
   },
   "EventBusConfig": {
-    "CurrentService": "STOCKLISTING",
+    "CurrentService": "STOCKLISTING_PH",
     "CurrentExchange": "EX_STOCKLISTING",
     "Exchange": {
       "MEMBER": "EX_MEMBER",
