--- a/StockDealService/StockDealService.csproj
+++ b/StockDealService/StockDealService.csproj
@@ -1,8 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
-    <UserSecretsId>4ad72804-d85c-4f4a-8027-822b3ee5f273</UserSecretsId>
+	  <TargetFramework>net5.0</TargetFramework>
+	  <ServerGarbageCollection>false</ServerGarbageCollection>
+	  <UserSecretsId>4ad72804-d85c-4f4a-8027-822b3ee5f273</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
 
